avoids copy and create unmodifiable collections for safety